appview: add website and topics fields to repo
Removed description edit UI / endpoints and put unified base settings
form in repository settings page.
This form is restricted to `repo:owner` permission same as before.

The internal model of topics is an array but they are stored/edited as
single string where each topics are joined with whitespaces.

Having a dedicated topics table with M:M relationship to the repo seems
a bit overkill considering we will have external search indexer anyway.

Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -17,6 +17,9 @@
           {{ template "user/fragments/picHandleLink" .RepoInfo.OwnerDid }}
           <span class="select-none">/</span>
           <a href="/{{ .RepoInfo.FullName }}" class="font-bold">{{ .RepoInfo.Name }}</a>
+          {{ range $topic := .RepoInfo.Topics }}
+            <span class="font-normal normal-case text-sm rounded py-1 px-2 bg-white dark:bg-gray-800">{{ $topic }}</span>
+          {{ end }}
         </div>
 
         <div class="flex items-center gap-2 z-auto">
@@ -38,7 +41,14 @@
           </a>
         </div>
       </div>
-      {{ template "repo/fragments/repoDescription" . }}
+      <span id="repo-description" class="flex flex-wrap items-center gap-2 text-sm" hx-target="this" hx-swap="outerHTML">
+        {{ if .RepoInfo.Description }}
+          {{ .RepoInfo.Description | description }}
+        {{ else }}
+          <span class="italic">this repo has no description</span>
+        {{ end }}
+        <a href="{{ .RepoInfo.Website }}" class="underline text-blue-800 dark:text-blue-300">{{ .RepoInfo.Website | trimUriScheme }}</a>
+      </span>
     </section>
 
     <section class="w-full flex flex-col" >
