appview/models: add `NotificationTypeUserMentioned` notif type
Signed-off-by: Seongmin Lee <git@boltless.me>

--- a/appview/pages/templates/notifications/fragments/item.html
+++ b/appview/pages/templates/notifications/fragments/item.html
@@ -54,6 +54,8 @@
     reopened a pull request
   {{ else if eq .Type "followed" }}
     followed you
+  {{ else if eq .Type "user_mentioned" }}
+    mentioned you
   {{ else }}
   {{ end }}
 {{ end }}
