--- a/appview/pages/templates/repo/issues/fragments/issueListing.html
+++ b/appview/pages/templates/repo/issues/fragments/issueListing.html
@@ -8,7 +8,7 @@
             class="no-underline hover:underline"
             >
             {{ .Title | description }}
-            <span class="text-gray-500">#{{ .IssueId }}</span>
+            <span class="text-gray-500 dark:text-gray-400">#{{ .IssueId }}</span>
         </a>
       </div>
       <div class="text-sm text-gray-500 dark:text-gray-400 flex flex-wrap items-center gap-1">
