appview/knots, appview/spindles: strip protocol and @ symbol from user inputs
Signed-off-by: Evan Jarrett <evan@evanjarrett.com>

--- a/appview/pages/templates/repo/settings/access.html
+++ b/appview/pages/templates/repo/settings/access.html
@@ -89,7 +89,7 @@
     id="add-collaborator"
     name="collaborator"
     required
-    placeholder="@foo.bsky.social"
+    placeholder="foo.bsky.social"
   />
   <div class="flex gap-2 pt-2">
     <button
