--- a/appview/pages/templates/spindles/fragments/addMemberModal.html
+++ b/appview/pages/templates/spindles/fragments/addMemberModal.html
@@ -36,7 +36,7 @@
     id="member-did-{{ .Id }}"
     name="member"
     required
-    placeholder="@foo.bsky.social"
+    placeholder="foo.bsky.social"
   />
   <div class="flex gap-2 pt-2">
     <button 
