appview/pages: fix firefox autofilling addMemberModal with autocomplete=off
Signed-off-by: Evan Jarrett <evan@evanjarrett.com>

--- a/appview/pages/templates/knots/fragments/addMemberModal.html
+++ b/appview/pages/templates/knots/fragments/addMemberModal.html
@@ -30,6 +30,9 @@
   </label>
   <p class="text-sm text-gray-500 dark:text-gray-400">Members can create repositories and run workflows on this knot.</p>
   <input
+    autocapitalize="none"
+    autocorrect="off"
+    autocomplete="off"
     type="text"
     id="member-did-{{ .Id }}"
     name="member"
