--- a/appview/pages/templates/spindles/fragments/addMemberModal.html
+++ b/appview/pages/templates/spindles/fragments/addMemberModal.html
@@ -32,6 +32,7 @@
   <input
     autocapitalize="none"
     autocorrect="off"
+    autocomplete="off"
     type="text"
     id="member-did-{{ .Id }}"
     name="member"
