appview/pages: add external link panel to issues
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -20,6 +20,7 @@
               "Subject" $.Issue.AtUri
               "State" $.Issue.Labels) }}
       {{ template "repo/fragments/participants" $.Issue.Participants }}
+      {{ template "repo/fragments/externalLinkPanel" $.Issue.AtUri }}
     </div>
   </div>
 {{ end }}
