appview/models: rename Pull.PullAt() to Pull.AtUri()
in sync with Issue.AtUri.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pulls/fragments/pullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullHeader.html
@@ -75,7 +75,7 @@
                     "Kind"      $kind
                     "Count"     $reactionData.Count
                     "IsReacted" (index $.UserReacted $kind)
-                    "ThreadAt"  $.Pull.PullAt
+                    "ThreadAt"  $.Pull.AtUri
                     "Users"     $reactionData.Users)
             }}
         {{ end }}
