appview/pages: add external link panel to pulls
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -21,6 +21,7 @@
               "Subject" $.Pull.AtUri
               "State" $.Pull.Labels) }}
       {{ template "repo/fragments/participants" $.Pull.Participants }}
+      {{ template "repo/fragments/externalLinkPanel" $.Pull.AtUri }}
     </div>
   </div>
 {{ end }}
