--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -21,6 +21,9 @@
               "Subject" $.Pull.AtUri
               "State" $.Pull.Labels) }}
       {{ template "repo/fragments/participants" $.Pull.Participants }}
+      {{ template "repo/fragments/backlinks"
+        (dict "RepoInfo" $.RepoInfo
+              "Backlinks" $.Backlinks) }}
       {{ template "repo/fragments/externalLinkPanel" $.Pull.AtUri }}
     </div>
   </div>
