appview/pages: tweak landing page hero copy
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.org>

--- a/appview/pages/templates/timeline/fragments/hero.html
+++ b/appview/pages/templates/timeline/fragments/hero.html
@@ -4,10 +4,10 @@
             <h1 class="font-bold text-4xl">tightly-knit<br>social coding.</h1>
 
             <p class="text-lg">
-              tangled is new social-enabled git collaboration platform built on <a class="underline" href="https://atproto.com/">atproto</a>.
+                Tangled is a decentralized Git hosting and collaboration platform.
             </p>
             <p class="text-lg">
-              we envision a place where developers have complete ownership of their
+              We envision a place where developers have complete ownership of their
               code, open source communities can freely self-govern and most
               importantly, coding can be social and fun again.
             </p>
