appview/pages: improve search bar styling in issues and pulls
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/repobase.html
+++ b/appview/pages/templates/layouts/repobase.html
@@ -104,7 +104,7 @@
             </div>
         </nav>
         {{ block "repoContentLayout" . }}
-          <section class="bg-white dark:bg-gray-800 p-6 rounded relative w-full mx-auto dark:text-white">
+          <section class="bg-white dark:bg-gray-800 px-6 py-4 rounded relative w-full mx-auto dark:text-white">
             {{ block "repoContent" . }}{{ end }}
           </section>
           {{ block "repoAfter" . }}{{ end }}
