appview/pages: add typeahead to add-collaborator modal
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -9,6 +9,7 @@
 
             <script defer src="/static/htmx.min.js"></script>
             <script defer src="/static/htmx-ext-ws.min.js"></script>
+            <script defer src="/static/actor-typeahead.js" type="module"></script>
 
             <!-- preconnect to image cdn -->
             <link rel="preconnect" href="https://avatar.tangled.sh" />
