--- a/appview/pages/templates/knots/fragments/addMemberModal.html
+++ b/appview/pages/templates/knots/fragments/addMemberModal.html
@@ -13,7 +13,9 @@
   <div
     id="add-member-{{ .Id }}"
     popover
-    class="bg-white w-full md:w-96 dark:bg-gray-800 p-4 rounded border border-gray-200 dark:border-gray-700 drop-shadow dark:text-white backdrop:bg-gray-400/50 dark:backdrop:bg-gray-800/50">
+    class="
+    bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 dark:text-white backdrop:bg-gray-400/50 dark:backdrop:bg-gray-800/50
+    w-full md:w-96 p-4 rounded drop-shadow overflow-visible">
     {{ block "addKnotMemberPopover" . }} {{ end }}
   </div>
 {{ end }}
@@ -29,16 +31,19 @@
     ADD MEMBER
   </label>
   <p class="text-sm text-gray-500 dark:text-gray-400">Members can create repositories and run workflows on this knot.</p>
-  <input
-    autocapitalize="none"
-    autocorrect="off"
-    autocomplete="off"
-    type="text"
-    id="member-did-{{ .Id }}"
-    name="member"
-    required
-    placeholder="foo.bsky.social"
-  />
+  <actor-typeahead>
+    <input
+      autocapitalize="none"
+      autocorrect="off"
+      autocomplete="off"
+      type="text"
+      id="member-did-{{ .Id }}"
+      name="member"
+      required
+      placeholder="user.tngl.sh"
+      class="w-full"
+    />
+  </actor-typeahead>
   <div class="flex gap-2 pt-2">
     <button 
       type="button"
